# sentinel-100k

./: .env.example  .gitignore  .pre-commit-config.yaml  1_vuoden_simulaatio.md  AI_SERVICES_100_PERCENT_INTEGRATION.md  AI_SERVICES_ACTION_PLAN.md  BUDGET_SYSTEM_INTELLIGENCE_ANALYSIS.md  CODE_REVIEW_FINAL_REPORT.md  COMPLETE_FILE_INVENTORY.md  DEVOPS_SETUP.md  GUARDIAN_TEHTAVA_ANALYYSI.md  INTEGRATION_IMPROVEMENT_PLAN.md  KORJAUKSET_VALMIS.md  LOVABLE_BACKEND_SUCCESS.md  MEDIUM_FEATURES_ACTION_PLAN.md  MEDIUM_FEATURES_CRITICAL_ANALYSIS.md  MEDIUM_FEATURES_INTEGRATION_PLAN.md  MUKTAR_PROFILE_FINAL.md  OPENAI_API_KEY_SETUP.md  OPENAI_RENDER_STATUS_REPORT.md  PART_5_SUMMARY.md  Procfile  QUICK_START_CHATGPT.md  README.md  README_FOR_CHATGPT.md  REALISTINEN_1V_SIMULAATIO.md  REAL_SENTINEL_LOVABLE_GUIDE.md  REAL_SERVICES_COMPLETE_GUIDE.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_MANUAL_DEPLOY.md  RENDER_PIKAOPAS.md  RENDER_SIIRTO_VALMIS.md  SENTINEL_100K_BENEFIT_COMPARISON.md  SENTINEL_100K_COMPLETE_ANALYSIS.md  SENTINEL_100K_DETAILED_PURPOSE.md  SENTINEL_100K_FINAL_BENEFIT_ANALYSIS.md  SENTINEL_100K_FINAL_IMPLEMENTATION_PLAN.md  SENTINEL_100K_FINAL_STATUS_REPORT.md  SENTINEL_100K_LOPULLINEN_STATUS.md  SENTINEL_100K_MUUTOKSET_KAYTTOON.md  (+72 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
backend/: ai_action_bridge.py  intent_engine.py  main.py  sentinel_integration.py  sentinel_integration_simple.py  telegram_notifier.py  telegram_router.py  telegram_webhook.py
data/: ai_learning.json  analysis.json  analytics.json  budgets.json  cycles.json  onboarding.json  users.json  users_database.json
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  README.md  SERVICES_DETAILED.md
personal_finance_agent/: ADVANCED_INTELLIGENCE_SUMMARY.md  API_STARTUP_GUIDE.md  PART_3_SUMMARY.md  README.md  enterprise_database_fixed.py  personal_finance.db  requirements.txt  run_api.py  streamlit_app.py  test_ai_direct.py  test_intelligent_bot.py  test_mock_gpt.py  test_prompt_engine_complete.py  test_scheduler_complete.py  test_security_fixes.py  test_security_simple.py
personal_finance_agent/app/: main.py  main.py.bak
personal_finance_agent/app/api/: __init__.py  auth.py  dashboard.py  guardian.py  intelligence.py  watchdog.py  watchdog.py.bak
personal_finance_agent/app/core/: config.py
personal_finance_agent/app/db/: __init__.py  base.py  init_db.py
personal_finance_agent/app/models/: agent_state.py  budget.py  category.py  category_correction.py  document.py  goal.py  recommendation.py  transaction.py  user.py
personal_finance_agent/app/schemas/: auth.py  user.py
personal_finance_agent/app/services/: __init__.py  ai_memory_layer.py  auth_service.py  career_intelligence.py  challenge_engine.py  event_bus.py  financial_shield.py  liabilities_insight.py  predictive_budget.py  scheduler_service.py  sentinel_guardian_service.py  sentinel_learning_engine.py  smart_receipt_scanner.py
personal_finance_agent/pages/: __init__.py  documents.py  guardian.py  intelligence.py  onboarding.py  transactions.py
personal_finance_agent/tests/: test_api.py  test_database.py  test_services.py
personal_finance_agent_backup/: .coverage  .env.example  PART_4_SUMMARY.md  SENTINEL_LEARNING_ENGINE_SUMMARY.md  enterprise_security_fixed.py  enterprise_security_system.py  main_security_fixed.py  minimal_api_fixed.py  openai_api.py  run_streamlit.py  test_scheduler_functional.py
personal_finance_agent_backup/app/: __init__.py  main.py
personal_finance_agent_backup/app/api/: __init__.py  advanced_intelligence.py  categories.py  enhanced_ocr.py.bak  transactions.py
personal_finance_agent_backup/app/models/: __init__.py  agent_state.py  budget.py  goal.py  recommendation.py
personal_finance_agent_backup/app/schemas/: __init__.py  category.py  dashboard.py  document.py  transaction.py
personal_finance_agent_backup/app/services/: __init__.py  categorization_service.py  document_service.py  idea_engine.py  income_stream_intelligence.py  ocr_service.py  scheduler_service.py  sentinel_watchdog_service.py  user_context_service.py
personal_finance_agent_backup/pages/: analytics.py  goals.py  settings.py
tests/: conftest.py
